# RenesasMcuMaster

./: .gitignore  AGENTS.md  CMakeLists.txt  Phase1_实施方案_RX_UART.md  README.md  RenesasForge.slnx  mcu_platform_plan.md  mvp_implementation_plan.md
.agents/skills/: SYNC_POLICY.md
.agents/skills/pc-scope-wpf/: SKILL.md
.agents/skills/rx-uart-mvp/: SKILL.md
.codex/: config.toml
.codex/rules/: build-test.md  frontend.md  review.md  safety.md  safety.rules
.codex/skills/pc-scope-qt/: SKILL.md
docs/: development_log.md  quick_start.md  uart_simulator_guide.md
docs/architecture/: wpf_mvp_architecture.md
docs/migration/: legacy_qt_freeze_policy.md  qt_to_wpf_gap_analysis.md
docs/protocol/: rforge_uart_debug_protocol_v1.md
mcu_sdk/rx_minimal/: rforge_protocol.c  rforge_protocol.h
src-dotnet/RenesasForge.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RenesasForge.App.csproj
src-dotnet/RenesasForge.Core/: DataEngine.cs  RecordEngine.cs  StreamFrameCodec.cs  VarEngine.cs
src-dotnet/RenesasForge.Core/Abstractions/: ITransport.cs
src-dotnet/RenesasForge.Core/Models/: Contracts.cs  Enums.cs
src-dotnet/RenesasForge.Protocol/: Crc16Ccitt.cs  IProtocolParser.cs  ParserManager.cs  RenesasForge.Protocol.csproj
src-dotnet/RenesasForge.Protocol/Parsers/: RForgeBinaryParser.cs  VofaCompatibleParser.cs
src-dotnet/RenesasForge.Tests.UiSmoke/: RenesasForge.Tests.UiSmoke.csproj  Test1.cs
src-dotnet/RenesasForge.Tests.Unit/: ParserAndCoreTests.cs  RenesasForge.Tests.Unit.csproj
src-dotnet/RenesasForge.Transport.Serial/: RenesasForge.Transport.Serial.csproj
src/app/: main.cpp
src/common/: types.h
src/core/: ConnectionManager.cpp  ConnectionManager.h  DataEngine.cpp  DataEngine.h  RecordEngine.cpp  RecordEngine.h  VarEngine.cpp  VarEngine.h
src/protocol/: Crc16Ccitt.cpp  Crc16Ccitt.h  IProtocolParser.h  ParserManager.cpp  ParserManager.h  RForgeBinaryParser.cpp  RForgeBinaryParser.h  VofaCompatibleParser.cpp  VofaCompatibleParser.h
src/transport/: ITransport.h  SerialTransport.cpp  SerialTransport.h
src/ui/qml/: Main.qml
src/viewmodel/: ConnectionVM.cpp  ConnectionVM.h  RecorderVM.cpp  RecorderVM.h  VariableVM.cpp  VariableVM.h  WaveformVM.cpp  WaveformVM.h
tests/integration/: README.md
tests/ui/: test_connection_vm.cpp
tests/unit/: test_rforge_parser.cpp
tools/: uart_e2e_tester.py  uart_mcu_sim.py
(+7 files in other folders)
